<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="15dp">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="101dp"
            android:layout_height="33dp"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:text="@string/nom" />

        <EditText
            android:id="@+id/etNom"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/cognom" />

        <EditText
            android:id="@+id/etCognom"
            android:layout_width="312dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/telefon" />

        <EditText
            android:id="@+id/etTelefon"
            android:layout_width="307dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textPersonName" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/marca" />

        <EditText
            android:id="@+id/etMarca"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textPersonName" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/model" />

        <EditText
            android:id="@+id/etModel"
            android:layout_width="315dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textPersonName" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/matricula" />

        <EditText
            android:id="@+id/etMatricula"
            android:layout_width="304dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/add"
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:text="@string/insert" />

        <Button
            android:id="@+id/modify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:text="@string/modify" />

        <Button
            android:id="@+id/buttonSearch"
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:text="@string/search" />

    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/viewLlista"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="1.0" />
</LinearLayout>